--- a/register.html
+++ b/register.html
@@ -7,6 +7,14 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+	<!-- Branding area -->
+	<header>
+	<div>
+		<h1>StackOverflow-lite</h1>
+	</div>		
+	</header>
+	
+	
 
 </body>
 </html>
