--- a/register.html
+++ b/register.html
@@ -11,7 +11,21 @@
 	<header>
 	<div>
 		<h1>StackOverflow-lite</h1>
-	</div>		
+	</div>	
+	<!-- Nav bar -->
+	<nav>
+		<div>
+		<a href="index.html">Home</a>
+		<a href="login.html">Sign In</a>
+		<div>
+			<form>
+				<input type="text" placeholder="Search" name="Search">
+				<button type="submit"></button>
+			</form>
+		</div>
+		<a href="register.html">Sign Up</a>
+	</div>
+	</nav>		
 	</header>
 	
 	
