Add styles to header and Navbar

--- a/register.html
+++ b/register.html
@@ -14,10 +14,10 @@
 	</div>	
 	<!-- Nav bar -->
 	<nav>
-		<div>
+		<div class="containernav">
 		<a href="index.html">Home</a>
 		<a href="login.html">Sign In</a>
-		<div>
+		<div class="nav-search">
 			<form>
 				<input type="text" placeholder="Search" name="Search">
 				<button type="submit"></button>
