input fields for registering

--- a/register.html
+++ b/register.html
@@ -27,8 +27,25 @@
 	</div>
 	</nav>		
 	</header>
-	
-	
-
+	<!-- Login area-->
+	<form>
+<fieldset>
+	<legend><strong>Sign Up</strong></legend>
+	<div class="container">
+		<p><strong>Join Today</strong></p>
+		<hr>
+		<label><b>Email:</b></label><br>
+		<input type="text" placeholder="Enter Email" name=""><br>
+		<label><b>Password:</b></label><br>
+		<input type="text" placeholder="Enter Password" name=""><br>
+		<label><b>Confirm Password:</b></label><br>
+		<input type="text" placeholder="Repeat Password" name=""><br>
+		<hr>
+		<p>I have read the terms and conditions<a href="terms.html"> Terms & conditions</a></p>
+		<button type="submit" onclick="alert('Registeration successfull')" class="submitbtn">Submit</button>
+		<div><p>Already have an account?<a href="login.html"> Log in</a></p></div>
+	</div>
+</fieldset>
+</form>
 </body>
 </html>
