Create footer to register page

--- a/register.html
+++ b/register.html
@@ -47,5 +47,10 @@
 	</div>
 </fieldset>
 </form>
+<!-- Footer area -->
+<footer>
+<small>Alpha-Andela-Cohort-33 Design Copyright &copy;2018</small>
+</footer>
+
 </body>
 </html>
